2008-08-18 - Sean Huber (shuber@huberry.com)
	* Added tests
	* Removed evaluate_condition calls and used validates_each like syntax (could't just use validates_each because we needed to overwrite the :allow_nil and :allow_blank logic to check if the foreign_key was nil/blank, NOT the association)